centurion and rtl updated includes

--- a/assets/sass/centurion-rtl.sass
+++ b/assets/sass/centurion-rtl.sass
@@ -24,17 +24,19 @@
 
 /*  Features */
 /* Show Elements */
-@include show-desktop
-@include show-mobile
+@include hide-view(desktop)
+@include show-block(desktop)
 
 /* Alerts */
-@include alerts
+@include default-alert
+@include alert-options
 
 /* Breadrumbs */
 @include breadcrumbs
 
 /* Buttons */
-@include buttons
+//@include buttons-gradient
+@include buttons-flat
 
 /* Images */
 @include images
@@ -66,7 +68,7 @@
 /* Print */
 @include print
 
-@include mobile-view
+/* Elusive Icon Webfont */
+@include elusive-webfont
 
 @import custom
-@import elusive-webfont
