--- a/assets/sass/_custom.sass
+++ b/assets/sass/_custom.sass
@@ -27,7 +27,10 @@ ul, ol
 /* HEADER */
 header
   border-bottom: 1px solid $grey
-  padding-bottom: 20px
+  margin-bottom: 1em
+  padding-bottom: 1em
+  h1
+    margin: 1em 0 0 0
   nav
     ul
       li
