--- a/assets/sass/core/_buttons.sass
+++ b/assets/sass/core/_buttons.sass
@@ -25,53 +25,50 @@
       text-align: center
       width: 100%
       
-  @include create-button-gradient(grey-btn, $white, #e5e5e5, #b7b7b7)
+  @include create-button-gradient(grey-gr-btn, $white, #e5e5e5, #b7b7b7)
   
-  @include create-button-gradient(blue-btn, #a7cfdf, #23538a, #004089)
+  @include create-button-gradient(blue-gr-btn, #a7cfdf, #23538a, #004089)
   
-  @include create-button-gradient(red-btn, #ff3019, #cf0404, #aa0303)
+  @include create-button-gradient(red-gr-btn, #ff3019, #cf0404, #aa0303)
   
-  @include create-button-gradient(yellow-btn, #fced62, #febf04, #ffaa00, $text-color)
+  @include create-button-gradient(yellow-gr-btn, #fced62, #febf04, #ffaa00, $text-color)
   
-  @include create-button-gradient(orange-btn, #ffa84c, #ff7b0d, #fc6000)
+  @include create-button-gradient(orange-gr-btn, #ffa84c, #ff7b0d, #fc6000)
   
-  @include create-button-gradient(green-btn, #a4b357, #75890c, #5b7a00)
+  @include create-button-gradient(green-gr-btn, #a4b357, #75890c, #5b7a00)
 
 
 
 @mixin buttons-flat
   .btn
-    color: $white
+    color: $grey
     @include default-button
     @extend %noTextDecoration
 
-    &:hover,
-    &:active,
-    &:visited
+    &:hover
       @include default-button-hover
-      color: $white
     
     &.small-btn
-      font-size: ($default-font-size - 0.15)
+      font-size: ($default-font-size - 0.3)
       @include element-spacing(two, padding, 0.533em, 1.2em) //padding: 8px 18px
 
     &.large-btn
       font-size: ($default-font-size + 0.3)
-      @include element-spacing(two, padding, 0.533em, 1.6em)
+      @include element-spacing(two, padding, 0.333em, 1.6em)
 
     &.full-btn
       @include element-spacing(vertical, padding, 0.667em) //padding: 10px 0
       text-align: center
       width: 100%
     
-  @include create-button(grey-btn-flat, $white, #e5e5e5, #b7b7b7)
+  @include create-button(grey-btn, #e5e5e5, #b7b7b7, #333333)
   
-  @include create-button(blue-btn-flat, #a7cfdf, #23538a, #004089)
+  @include create-button(blue-btn, #23538a, #004089)
   
-  @include create-button(red-btn-flat, #ff3019, #cf0404, #aa0303)
+  @include create-button(red-btn, #ff3019, #cf0404)
   
-  @include create-button(yellow-btn-flat, #fced62, #febf04, #ffaa00)
+  @include create-button(yellow-btn, #fced62, #febf04, #333)
   
-  @include create-button(orange-btn-flat, #ffa84c, #ff7b0d, #fc6000)
+  @include create-button(orange-btn, #ffa84c, #ff7b0d)
   
-  @include create-button(green-btn-flat, #a4b357, #75890c, #5b7a00)
+  @include create-button(green-btn, #a4b357, #75890c)
