--- a/assets/sass/grid-rtl.sass
+++ b/assets/sass/grid-rtl.sass
@@ -1,6 +1,6 @@
 /* --------------------------------------------------------
  *
- *  Centurion Framework v 3.4 - GRID ONLY
+ *  Centurion Framework v 3.4 - RTL GRID ONLY
  *  Created by: Justin Hough (http://justinhough.com/)
  *
  *  Documentation: http://jhough10.github.com/Centurion/get-started.html
@@ -10,7 +10,8 @@
 
 @import "core/base"
 
-@include grid
-@include media-query(phones)
-  @include grid-mobile
-@include grid-media-query
+.rtl
+  @include grid(right)
+  @include media-query(phones)
+    @include grid-mobile(right)
+  @include grid-media-query
