Fixing show/hide for desktop and mobile, then added for tablets

--- a/assets/sass/core/_grid.sass
+++ b/assets/sass/core/_grid.sass
@@ -10,12 +10,13 @@
 @mixin mobile-grid-generate($width:$grid-size)
   @include media-query(phones)
     @include grid-mobile
-    @include phone-hide-view
     
 @mixin grid-media-query
   @include media-query(tablets)
     .container
       width: 98%
+    @include hide-view(tablet)
+    
   @include media-query(desktops)
     .container
       width: $max-grid-size
