--- a/assets/sass/core/_mixins.sass
+++ b/assets/sass/core/_mixins.sass
@@ -258,6 +258,7 @@
     @include grid-rows(thirds, $direction)
     @include alpha-omega($direction)
     @include grid-center
+    @include hide-view(desktop)
     
 
 // Mobile Grid Generator - NO PUSH OR PULL
@@ -283,10 +284,10 @@
     @include grid-center
     
     [class^="#{$pull-class}-"],
-    [class^="#{$pull-class}-"]
+    [class^="#{$push-class}-"]
       #{$direction}: 0
-  
-  @include hide-view(mobile)
+      
+    @include hide-view(mobile)
   
 
 // IE 7 Support
