--- a/assets/css/fluid.css
+++ b/assets/css/fluid.css
@@ -7,18 +7,15 @@
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
-/* line 1, ../sass/core/_typography.sass */
 body {
   font-size: 15px;
 }
 
 /* Fluid Grid */
-/* line 247, ../sass/core/_mixins.sass */
 .container {
   width: 98%;
   margin: 0 auto;
 }
-/* line 250, ../sass/core/_mixins.sass */
 .container .grid-5, .container .grid-10, .container .grid-15, .container .grid-20, .container .grid-25, .container .grid-30, .container .grid-35, .container .grid-40, .container .grid-45, .container .grid-50, .container .grid-55, .container .grid-60, .container .grid-65, .container .grid-70, .container .grid-75, .container .grid-80, .container .grid-85, .container .grid-90, .container .grid-95, .container .grid-100, .container .grid-33, .container .grid-66 {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -29,387 +26,302 @@ body {
   padding: 0 15px;
   position: relative;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-5 {
   width: 5%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-5 {
   left: -5%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-5 {
   left: 5%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-10 {
   width: 10%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-10 {
   left: -10%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-10 {
   left: 10%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-15 {
   width: 15%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-15 {
   left: -15%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-15 {
   left: 15%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-20 {
   width: 20%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-20 {
   left: -20%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-20 {
   left: 20%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-25 {
   width: 25%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-25 {
   left: -25%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-25 {
   left: 25%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-30 {
   width: 30%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-30 {
   left: -30%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-30 {
   left: 30%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-35 {
   width: 35%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-35 {
   left: -35%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-35 {
   left: 35%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-40 {
   width: 40%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-40 {
   left: -40%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-40 {
   left: 40%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-45 {
   width: 45%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-45 {
   left: -45%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-45 {
   left: 45%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-50 {
   width: 50%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-50 {
   left: -50%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-50 {
   left: 50%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-55 {
   width: 55%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-55 {
   left: -55%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-55 {
   left: 55%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-60 {
   width: 60%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-60 {
   left: -60%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-60 {
   left: 60%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-65 {
   width: 65%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-65 {
   left: -65%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-65 {
   left: 65%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-70 {
   width: 70%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-70 {
   left: -70%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-70 {
   left: 70%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-75 {
   width: 75%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-75 {
   left: -75%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-75 {
   left: 75%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-80 {
   width: 80%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-80 {
   left: -80%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-80 {
   left: 80%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-85 {
   width: 85%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-85 {
   left: -85%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-85 {
   left: 85%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-90 {
   width: 90%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-90 {
   left: -90%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-90 {
   left: 90%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-95 {
   width: 95%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-95 {
   left: -95%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-95 {
   left: 95%;
 }
-/* line 201, ../sass/core/_mixins.sass */
 .container .grid-100 {
   width: 100%;
 }
-/* line 205, ../sass/core/_mixins.sass */
 .container .pull-100 {
   left: -100%;
 }
-/* line 208, ../sass/core/_mixins.sass */
 .container .push-100 {
   left: 100%;
 }
-/* line 220, ../sass/core/_mixins.sass */
 .container .grid-33 {
   width: 33.33333%;
 }
-/* line 224, ../sass/core/_mixins.sass */
 .container .pull-33 {
   left: -33.33333%;
 }
-/* line 227, ../sass/core/_mixins.sass */
 .container .push-33 {
   left: 33.33333%;
 }
-/* line 220, ../sass/core/_mixins.sass */
 .container .grid-66 {
   width: 66.66667%;
 }
-/* line 224, ../sass/core/_mixins.sass */
 .container .pull-66 {
   left: -66.66667%;
 }
-/* line 227, ../sass/core/_mixins.sass */
 .container .push-66 {
   left: 66.66667%;
 }
-/* line 83, ../sass/core/_mixins.sass */
 .container .alpha {
   margin-left: 0;
   padding-left: 0;
 }
-/* line 87, ../sass/core/_mixins.sass */
 .container .omega {
   margin-right: 0;
   padding-right: 0;
 }
-/* line 97, ../sass/core/_mixins.sass */
 .container .center-grid {
   display: block;
   float: none;
   margin: 0 auto;
 }
+.container .hide-desktop,
+.container .hide-tablet {
+  display: none !important;
+}
+.container .hide-mobile {
+  display: block !important;
+}
 
 @media only screen and (max-width: 600px) {
-  /* line 269, ../sass/core/_mixins.sass */
   .container {
     width: 100%;
     margin: 0 auto;
   }
-  /* line 272, ../sass/core/_mixins.sass */
   .container [class^="grid-"] {
     display: inline;
     float: left;
     width: 100%;
   }
-  /* line 276, ../sass/core/_mixins.sass */
   .container [class^="grid-"] [class^="grid-"],
   .container [class^="grid-"] [class^="mobile-grid-"] {
     padding: 0;
     margin: 0;
   }
-  /* line 235, ../sass/core/_mixins.sass */
   .container .mobile-25 {
     width: 25%;
   }
-  /* line 237, ../sass/core/_mixins.sass */
   .container .mobile-pull-25 {
     left: -25%;
   }
-  /* line 239, ../sass/core/_mixins.sass */
   .container .mobile-push-25 {
     left: 25%;
   }
-  /* line 235, ../sass/core/_mixins.sass */
   .container .mobile-50 {
     width: 50%;
   }
-  /* line 237, ../sass/core/_mixins.sass */
   .container .mobile-pull-50 {
     left: -50%;
   }
-  /* line 239, ../sass/core/_mixins.sass */
   .container .mobile-push-50 {
     left: 50%;
   }
-  /* line 235, ../sass/core/_mixins.sass */
   .container .mobile-75 {
     width: 75%;
   }
-  /* line 237, ../sass/core/_mixins.sass */
   .container .mobile-pull-75 {
     left: -75%;
   }
-  /* line 239, ../sass/core/_mixins.sass */
   .container .mobile-push-75 {
     left: 75%;
   }
-  /* line 83, ../sass/core/_mixins.sass */
   .container .alpha {
     margin-left: 0;
     padding-left: 0;
   }
-  /* line 87, ../sass/core/_mixins.sass */
   .container .omega {
     margin-right: 0;
     padding-right: 0;
   }
-  /* line 97, ../sass/core/_mixins.sass */
   .container .center-grid {
     display: block;
     float: none;
     margin: 0 auto;
   }
-  /* line 285, ../sass/core/_mixins.sass */
   .container [class^="pull-"],
-  .container [class^="pull-"] {
+  .container [class^="push-"] {
     left: 0;
   }
-
-  /* line 356, ../sass/core/_mixins.sass */
-  .hide-desktop,
-  .hide-tablet {
+  .container .hide-desktop,
+  .container .hide-tablet {
     display: none !important;
   }
-
-  /* line 359, ../sass/core/_mixins.sass */
-  .hide-mobile {
+  .container .hide-mobile {
     display: block !important;
   }
 }
 @media only screen and (min-width: 601px) and (max-width: 920px) {
-  /* line 20, ../sass/fluid.sass */
   .container {
     width: 98%;
   }
 }
 @media only screen and (min-width: 1120px) {
-  /* line 24, ../sass/fluid.sass */
   .container {
     width: 100%;
   }
 }
-/* line 97, ../sass/core/_mixins.sass */
 .center-grid {
   display: block;
   float: none;
@@ -417,7 +329,6 @@ body {
 }
 
 /* Clearfix */
-/* line 11, ../sass/core/_mixins.sass */
 .clearfix:after, .clearfix:before,
 .container:after,
 .container:before {
@@ -429,13 +340,11 @@ body {
   clear: both;
   zoom: 1;
 }
-/* line 20, ../sass/core/_mixins.sass */
 * html .clearfix, * html
 .container {
   height: 1px;
 }
 
-/* line 22, ../sass/core/_mixins.sass */
 .clear {
   clear: both;
   display: block;
