--- a/includes/_header.html
+++ b/includes/_header.html
@@ -6,11 +6,8 @@
       <nav id="main" class="mobile">
         <ul>
           <li><a href="<!-- @path index.html -->" class="nav-current">Home</a></li>
-          <li><a href="<!-- @path index.html -->">About</a></li>
-          <li><a href="<!-- @path index.html -->">Fluid</a></li>
-          <li><a href="<!-- @path index.html -->">Grid</a></li>
-          <li><a href="<!-- @path index.html -->">Semantic</a></li>
-          <li><a href="<!-- @path index.html -->">Tables</a></li>
+          <li><a href="<!-- @path features.html -->">Features</a></li>
+          <li><a href="<!-- @path grid.html -->">Grid</a></li>
         </ul>
       </nav>
       
