navigation changes, added meta tags to layout_top, and removed meta from styles include

--- a/includes/_header.html
+++ b/includes/_header.html
@@ -5,7 +5,7 @@
       <h1>Centurion Framework</h1>
       <nav id="main" class="mobile">
         <ul>
-          <li><a href="<!-- @path index.html -->" class="nav-current">Home</a></li>
+          <li><a href="<!-- @path index.html -->">Home</a></li>
           <li><a href="<!-- @path features.html -->">Features</a></li>
           <li><a href="<!-- @path grid.html -->">Grid</a></li>
         </ul>
@@ -14,6 +14,8 @@
     </div>
   </div>
 </header>
+
+
 
 <section id="banner" class="home">
   <div class="container">
