--- a/includes/_layout-top.html
+++ b/includes/_layout-top.html
@@ -2,7 +2,19 @@
 <html>
 <head>
 	<title><!-- $title --> | Centurion - A CSS Web Framework</title>
+   
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
+  <link rel="shortcut icon" href="assets/img/favicon.jpg" />
+  <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/img/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/img/apple-touch-icon-114x114.png" />
+  
+  <meta name="keywords" content="_______"/>
+  <meta name="description" content="_______"/>
+  
   <!-- @include _styles -->
   <!-- @include _ga -->
 
@@ -15,9 +27,11 @@
 		<div class="container">
 		  <div class="post">
 
+<!--
         <header class="post-header">
-          <h1><!-- $content-title --></h1>
+          <h1>$content-titl</h1>
         </header>
+-->
         
         <article class="post-content">
         <!-- content -->
