added prefixes and new color (off-white)

--- a/assets/sass/core/_config.sass
+++ b/assets/sass/core/_config.sass
@@ -1,3 +1,6 @@
+// Prefixes
+$prefixes: -webkit -moz -o
+
 // Centurion - Grid Config
 $content-width: 1280
 $inner-width: 98
@@ -24,6 +27,8 @@ $pull-grid: pull
 // Centurion Colors
 $white: #FFF
 $black: #000
+
+$off-white: #EFEFEF
 
 $grey: #999
 $darker-grey: #333
