--- a/includes/_header.html
+++ b/includes/_header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="grid-24">
       
-      <h1>Centurion Framework</h1>
+      <h1>Centurion Framework <small>(v3.5.0)</small></h1>
       <nav id="main" class="mobile">
         <ul>
           <li><a href="<!-- @path index.html -->">Home</a></li>
